--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.15.0",
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
     "react/": "https://esm.sh/react@^19.1.1/",
-    "react": "https://esm.sh/react@^19.1.1",
-    "recharts": "https://esm.sh/recharts@^3.1.2"
+    "react": "https://esm.sh/react@^19.1.1"
   }
 }
 </script>
