--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.15.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "react/": "https://esm.sh/react@^19.1.1/",
-    "react": "https://esm.sh/react@^19.1.1"
+    "react-dom/": "https://esm.sh/react-dom@^18.3.1/",
+    "react/": "https://esm.sh/react@^18.3.1/",
+    "react": "https://esm.sh/react@^18.3.1",
+    "@tanstack/react-query": "https://esm.sh/@tanstack/react-query@5.51.1"
   }
 }
 </script>
