--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     "react-dom/": "https://esm.sh/react-dom@^18.3.1/",
     "react/": "https://esm.sh/react@^18.3.1/",
     "react": "https://esm.sh/react@^18.3.1",
-    "@tanstack/react-query": "https://esm.sh/@tanstack/react-query@5.51.1"
+    "@tanstack/react-query": "https://esm.sh/@tanstack/react-query@5.51.1",
+    "@tanstack/react-virtual": "https://esm.sh/@tanstack/react-virtual@3.8.0"
   }
 }
 </script>
