--- a/index.html
+++ b/index.html
@@ -5,18 +5,57 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QuantumLeap Finance</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        :root {
+            --color-background: 248 250 252; /* slate-50 */
+            --color-card: 255 255 255; /* white */
+            --color-accent: 59 130 246; /* blue-500 */
+            --color-accent-hover: 37 99 235; /* blue-600 */
+            --color-text-primary: 30 41 59; /* slate-800 */
+            --color-text-secondary: 100 116 139; /* slate-500 */
+            --color-text-tertiary: 148 163 184; /* slate-400 */
+            --color-border: 226 232 240; /* slate-200 */
+            --color-positive: 22 163 74; /* green-600 */
+            --color-negative: 220 38 38; /* red-600 */
+        }
+        .dark {
+            --color-background: 10 14 20;
+            --color-card: 16 20 27;
+            --color-accent: 59 130 246;
+            --color-accent-hover: 37 99 235;
+            --color-text-primary: 229 231 235;
+            --color-text-secondary: 156 163 175;
+            --color-text-tertiary: 107 114 128;
+            --color-border: 49 54 63; /* Custom border for dark mode */
+            --color-positive: 34 197 94;
+            --color-negative: 239 68 68;
+        }
+    </style>
     <script>
     tailwind.config = {
+      darkMode: 'class',
       theme: {
         extend: {
+          fontFamily: {
+            sans: ['Inter', 'sans-serif'],
+          },
           colors: {
-            'brand-primary': '#0D1117',
-            'brand-secondary': '#161B22',
-            'brand-accent': '#58A6FF',
-            'brand-text-primary': '#C9D1D9',
-            'brand-text-secondary': '#8B949E',
-            'brand-border': '#30363D',
+            background: 'rgb(var(--color-background) / <alpha-value>)',
+            card: 'rgb(var(--color-card) / <alpha-value>)',
+            accent: {
+              DEFAULT: 'rgb(var(--color-accent) / <alpha-value>)',
+              hover: 'rgb(var(--color-accent-hover) / <alpha-value>)'
+            },
+            'text-primary': 'rgb(var(--color-text-primary) / <alpha-value>)',
+            'text-secondary': 'rgb(var(--color-text-secondary) / <alpha-value>)',
+            'text-tertiary': 'rgb(var(--color-text-tertiary) / <alpha-value>)',
+            border: 'rgb(var(--color-border) / <alpha-value>)',
+            positive: 'rgb(var(--color-positive) / <alpha-value>)',
+            negative: 'rgb(var(--color-negative) / <alpha-value>)',
           }
         }
       }
@@ -36,7 +75,7 @@
 }
 </script>
 </head>
-<body class="bg-brand-primary">
+<body class="bg-background">
 <div id="root"></div>
 <script type="module" src="/index.tsx"></script>
 </body>
