--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^18.3.1/",
-    "react/": "https://esm.sh/react@^18.3.1/",
-    "react": "https://esm.sh/react@^18.3.1",
+    "sentiment": "https://esm.sh/sentiment",
     "@tanstack/react-query": "https://esm.sh/@tanstack/react-query@5.51.1",
     "@tanstack/react-virtual": "https://esm.sh/@tanstack/react-virtual@3.8.0",
-    "sentiment": "https://esm.sh/sentiment@5.0.2"
+    "react": "https://esm.sh/react@^18.3.1",
+    "react-dom/": "https://esm.sh/react-dom@^18.3.1/",
+    "react/": "https://esm.sh/react@^18.3.1/"
   }
 }
 </script>
