--- a/index.html
+++ b/index.html
@@ -11,28 +11,43 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root {
-            --color-background: 248 250 252; /* slate-50 */
+            --color-background: 249 250 251; /* gray-50 */
             --color-card: 255 255 255; /* white */
-            --color-accent: 59 130 246; /* blue-500 */
-            --color-accent-hover: 37 99 235; /* blue-600 */
-            --color-text-primary: 30 41 59; /* slate-800 */
-            --color-text-secondary: 100 116 139; /* slate-500 */
-            --color-text-tertiary: 148 163 184; /* slate-400 */
-            --color-border: 226 232 240; /* slate-200 */
-            --color-positive: 22 163 74; /* green-600 */
-            --color-negative: 220 38 38; /* red-600 */
+            --color-accent: 29 78 216; /* blue-700 */
+            --color-accent-hover: 30 64 175; /* blue-800 */
+            --color-text-primary: 17 24 39; /* gray-900 */
+            --color-text-secondary: 55 65 81; /* gray-700 */
+            --color-text-tertiary: 107 114 128; /* gray-500 */
+            --color-border: 229 231 235; /* gray-200 */
+            --color-positive: 21 128 61; /* green-700 */
+            --color-negative: 185 28 28; /* red-700 */
         }
         .dark {
-            --color-background: 10 14 20;
-            --color-card: 16 20 27;
-            --color-accent: 59 130 246;
-            --color-accent-hover: 37 99 235;
-            --color-text-primary: 229 231 235;
-            --color-text-secondary: 156 163 175;
-            --color-text-tertiary: 107 114 128;
-            --color-border: 49 54 63; /* Custom border for dark mode */
-            --color-positive: 34 197 94;
-            --color-negative: 239 68 68;
+            --color-background: 17 24 39; /* gray-900 */
+            --color-card: 31 41 55; /* gray-800 */
+            --color-accent: 96 165 250; /* blue-400 */
+            --color-accent-hover: 59 130 246; /* blue-500 */
+            --color-text-primary: 249 250 251; /* gray-50 */
+            --color-text-secondary: 209 213 219; /* gray-300 */
+            --color-text-tertiary: 156 163 175; /* gray-400 */
+            --color-border: 55 65 81; /* gray-700 */
+            --color-positive: 74 222 128; /* green-400 */
+            --color-negative: 248 113 113; /* red-400 */
+        }
+        body {
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
+        .dark body {
+             background-image: radial-gradient(circle at 1px 1px, rgba(209, 213, 219, 0.1) 1px, transparent 0);
+             background-size: 2rem 2rem;
+        }
+        @keyframes pulse-live {
+            0%, 100% { opacity: 1; transform: scale(1); }
+            50% { opacity: 0.7; transform: scale(1.2); }
+        }
+        .animate-pulse-live {
+            animation: pulse-live 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite;
         }
     </style>
     <script>
